--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,20 +5,35 @@
   --font-mono: var(--font-geist-mono);
 }
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes scroll-left-to-right {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@keyframes scroll-right-to-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.scroll-left-to-right {
+  display: flex;
+  animation: scroll-left-to-right 10s linear infinite;
+}
+
+.scroll-right-to-left {
+  display: flex;
+  animation: scroll-right-to-left 10s linear infinite;
+}
+
+.scroll-container {
+  overflow: hidden;
+  white-space: nowrap;
 }
